[package]
name = "casino"
version = "0.1.0"
description = "Solana Casino Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "casino"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
switchboard-v2 = "0.4.0"
sha2 = "0.10.8"
hex = "0.4.3"
bytemuck = "1.14.0"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] }
